update : change data user ( firstname, lastname, bio) + change password user + add logout profile

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^12.1.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7"
